# GAZSI

./: .gitignore  Makefile  README.md  build_and_run.sh  main.c  meson.build
dependencies/: meson.build
doca/: args.c  common.h  defines.h  device.c  flow.c  http_tx.c  packets.h  tcp.c
inference/: cupti_profiler.c  cupti_profiler.h  ring_buffer.cu  ring_buffer.h  tensorrt.cu  tensorrt.h
kernels/: filters.cuh  http_server.cu  tcp_rx.cu
tcp/: cpu_rss.c  cpu_rss.h  session.c  session.h
utils/: utils.c  utils.h
