# GPU Packet Processing - Dependencies Configuration
# SPDX-License-Identifier: BSD-3-Clause

# DOCA Driver dependencies
app_driver_depends += ['dpdk']

# DOCA SDK dependencies
app_doca_depends += ['argp']
app_doca_depends += ['gpunetio']
app_doca_depends += ['eth']
app_doca_depends += ['flow']
app_doca_depends += ['dpdk_bridge']
